# FSM

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
cmake/: CompileOptions.cmake  OptionVariables.cmake  ProjectConfig.cmake
example/: CMakeLists.txt  simple.c  traffic_light.c  vending_machine.c
include/: fsm.h
src/: fsm.c
