cmake_minimum_required(VERSION 3.14)

include(cmake/PreventInSourceBuilds.cmake)
include(cmake/GitVersion.cmake)
git_version_info(VERSION PROJECT_VERSION DEFAULT_VERSION 0.1.0)
project(fsm VERSION ${PROJECT_VERSION})

include(cmake/ProjectIsTopLevel.cmake)
include(cmake/OptionVariables.cmake)
include(cmake/ProjectConfig.cmake)

set(project_source_files src/fsm.c)
if(FSM_BUILD_SHARED)
    add_library(fsm SHARED ${project_source_files})
    add_library(fsm::shared ALIAS fsm)
    message(STATUS "fsm ${PROJECT_VERSION} shared library")
else()
    add_library(fsm STATIC ${project_source_files})
    add_library(fsm::static ALIAS fsm)
    message(STATUS "fsm ${PROJECT_VERSION} static library")
endif()
add_library(fsm::fsm ALIAS fsm)
target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_compile_dependency)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

if(FSM_BUILD_EXAMPLE)
    add_subdirectory(example)
endif()
